src/objects/OOH_Assortment__c.object
<CustomObject>
    <description>OOH : Used to product assortment (Assortment is group of unilver products) details.</description>
    <fields>
        <fullName>OOH_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OOH_AssortmentID__c</fullName>
        <externalId>true</externalId>
        <label>Assortment  ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOH_Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOH_Geograp__c</fullName>
        <label>Geograph</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OOH_Validate_end__c</fullName>
        <label>Validate end</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OOH_Validate_start__c</fullName>
        <label>Validate start</label>
        <type>Date</type>
    </fields>
    <label>Assortment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>OOH_AssortmentID__c</columns>
        <columns>OOH_Active__c</columns>
        <columns>OOH_Geograp__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Assortment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assortments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>